[tool.poetry]
name = "prefect_hello_world"
version = "0.1.0"
description = "Simple Prefect hello world example"
authors = ["Shikanime Deva <deva.shikanime@protonmail.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
